--- a/fam_get.html
+++ b/fam_get.html
@@ -136,7 +136,7 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>The non-blocking call does not return a value on Sucess. The
+	<p>The non-blocking call does not return a value on success. The
 		blocking call returns an integer value following normal C convention
 		of 0 for successful completion. Both non-blocking and blocking call
 		throw an exception on error.</p>
